# scrollbuffer

./: README.md  scrollbuffer.cabal
src/Data/: ScrollBuffer.hs
tests/: test.hs
